--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable(HJ1 HJ1.cpp)
 add_executable(HJ2 HJ2.cpp)
 add_executable(HJ3 HJ3.cpp)
 add_executable(HJ4 HJ4.cpp)
+add_executable(HJ5 HJ5.cpp)
