第七题四舍五入取近似值

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ add_executable(HJ3 HJ3.cpp)
 add_executable(HJ4 HJ4.cpp)
 add_executable(HJ5 HJ5.cpp)
 add_executable(HJ6 HJ6.cpp)
+add_executable(HJ7 HJ7.cpp)
