第八题合并表记录

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(HJ4 HJ4.cpp)
 add_executable(HJ5 HJ5.cpp)
 add_executable(HJ6 HJ6.cpp)
 add_executable(HJ7 HJ7.cpp)
+add_executable(HJ8 HJ8.cpp)
