--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,5 @@ add_executable(HJ5 HJ5.cpp)
 add_executable(HJ6 HJ6.cpp)
 add_executable(HJ7 HJ7.cpp)
 add_executable(HJ8 HJ8.cpp)
+add_executable(HJ9 HJ9.cpp)
+add_executable(HJ10 HJ10.cpp)
