第十一题数字颠倒

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ add_executable(HJ7 HJ7.cpp)
 add_executable(HJ8 HJ8.cpp)
 add_executable(HJ9 HJ9.cpp)
 add_executable(HJ10 HJ10.cpp)
+add_executable(HJ11 HJ11.cpp)
