第十二题反转字符串

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ add_executable(HJ8 HJ8.cpp)
 add_executable(HJ9 HJ9.cpp)
 add_executable(HJ10 HJ10.cpp)
 add_executable(HJ11 HJ11.cpp)
+add_executable(HJ12 HJ12.cpp)
