第十三题句子逆序

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,4 @@ add_executable(HJ9 HJ9.cpp)
 add_executable(HJ10 HJ10.cpp)
 add_executable(HJ11 HJ11.cpp)
 add_executable(HJ12 HJ12.cpp)
+add_executable(HJ13 HJ13.cpp)
