第十五题十进制转二进制后1的个数

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,4 @@ add_executable(HJ11 HJ11.cpp)
 add_executable(HJ12 HJ12.cpp)
 add_executable(HJ13 HJ13.cpp)
 add_executable(HJ14 HJ14.cpp)
+add_executable(HJ15 HJ15.cpp)
